Eliminate deprecation warnings